Se agrega seo y ajustes responsive

--- a/pages/diseñoWeb.html
+++ b/pages/diseñoWeb.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouX - Agencia de Marketing Digital</title>
+    <title>YouX - Diseño Web</title>
     <link rel="shortcut icon" href="../img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="../css/translated.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="Agencia de marketing digital. Elaboramos la estrategía integral para tu negocio o comercio">
+    <meta name="keywords" content="AGENCIA, MARKETING, ECOMMERCE, REDES SOCIALES, MARKETING DIGITAL, DISEÑO WEB, POSICIONAMIENTO, SERVICIO, POSICIONAMIENTO, YOUX "> 
  
 </head>
 <!--inicio del Body !-->
