--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/translated.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
- 
+    <meta name="description" content="Agencia de marketing digital. Elaboramos la estrategía integral para tu negocio o comercio">
+    <meta name="keywords" content="AGENCIA, MARKETING, ECOMMERCE, REDES SOCIALES, MARKETING DIGITAL, DISEÑO WEB, POSICIONAMIENTO, SERVICIO, POSICIONAMIENTO, YOUX "> 
+
 </head>
 <!--inicio del Body !-->
 
@@ -51,7 +53,6 @@
             Marketing
             Digital</h1>
             <h2 class="titulo2">Servicios de Publicidad y Marketing para Ecommerce</h2>
-            <img class="contactanos1" src="./img/botoncontactanos.png" alt="contactanos">
         </article>
     </section>
   
