Formato de código y ui

--- a/pages/ecommerce.html
+++ b/pages/ecommerce.html
@@ -1,86 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouX - Ecommerce</title>
-    <link rel="shortcut icon" href="../img/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/translated.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <meta name="description" content="Agencia de marketing digital. Elaboramos la estrategía integral para tu negocio o comercio">
-    <meta name="keywords" content="AGENCIA, MARKETING, ECOMMERCE, REDES SOCIALES, MARKETING DIGITAL, DISEÑO WEB, POSICIONAMIENTO, SERVICIO, POSICIONAMIENTO, YOUX "> 
- 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>YouX - Ecommerce</title>
+  <link rel="shortcut icon" href="../img/logo.svg" type="image/x-icon">
+  <link rel="stylesheet" href="../css/translated.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <meta name="description"
+    content="Agencia de marketing digital. Elaboramos la estrategía integral para tu negocio o comercio">
+  <meta name="keywords"
+    content="AGENCIA, MARKETING, ECOMMERCE, REDES SOCIALES, MARKETING DIGITAL, DISEÑO WEB, POSICIONAMIENTO, SERVICIO, POSICIONAMIENTO, YOUX ">
+
 </head>
 <!--inicio del Body !-->
 
 <body>
-    <!--header-->
-    <header class="header">
-        
-        <nav class="header__nav">
-            <img class="header__logo" src="../img/logo.svg" alt="YouX">
-            <ul class="header__ul">
-                <li class="header__li">
-                    <a  href="../index.html">Home</a>
-                </li>
-                <li class="header__li">
-                    <a href="../pages/ecommerce.html">Ecommerce</a>
-                </li>
-                <li class="header__li">
-                    <a href="../pages/diseñoWeb.html">Diseño Web</a>
-                </li>
-                <li class="header__li">
-                    <a href="../pages/marketingDigital.html">Marketing Digital</a>
-                </li>
-                <li class="header__li">
-                    <a href="../pages/redesSociales.html">Redes Sociales</a>
-                </li>
-            </ul>
-        </nav>
+  <!--header-->
+  <header class="header">
 
-    </header>
-<!--Fin header-->
-    <!--fin header-->
+    <nav class="header__nav">
+      <img class="header__logo" src="../img/logo.svg" alt="YouX">
+      <ul class="header__ul">
+        <li class="header__li">
+          <a href="../index.html">Home</a>
+        </li>
+        <li class="header__li">
+          <a href="../pages/ecommerce.html">Ecommerce</a>
+        </li>
+        <li class="header__li">
+          <a href="../pages/diseñoWeb.html">Diseño Web</a>
+        </li>
+        <li class="header__li">
+          <a href="../pages/marketingDigital.html">Marketing Digital</a>
+        </li>
+        <li class="header__li">
+          <a href="../pages/redesSociales.html">Redes Sociales</a>
+        </li>
+      </ul>
+    </nav>
 
-    <main>
-    
-        <section class="generic">
-            <article> <img src="../img/ecommerce.png" alt="ecommerce" data-aos="fade-up-right">
-            </article>    
-            <article class="ecommercee">
-              <h2> YouX Tienda Online E-commerce™
-              </h2>  
-                <h2>La plataforma de venta online más elegida por PyMes y grandes empresas de todo el mundo
-                </h2>
-               <p> √  Sin comisiones por venta </p>
-                <p>√  Solución llave en mano </p>
-                <p>√  Tienda Mayorista y Minorista </p>
-                <p>√  Mercado pago y mercado envíos </p>
-            </article>
+  </header>
+  <!--Fin header-->
+  <!--fin header-->
+
+  <main>
+
+    <section class="generic">
+      <article> <img src="../img/ecommerce.png" alt="ecommerce" data-aos="fade-up-right">
+      </article>
+      <article class="ecommercee">
+        <h2> YouX Tienda Online E-commerce™
+        </h2>
+        <h2>La plataforma de venta online más elegida por PyMes y grandes empresas de todo el mundo
+        </h2>
+        <p>√ Sin comisiones por venta </p>
+        <p>√ Solución llave en mano </p>
+        <p>√ Tienda Mayorista y Minorista </p>
+        <p>√ Mercado pago y mercado envíos </p>
+      </article>
 
 
-        </section>
-   </main>
-   <footer class="footerPlal" >
+    </section>
+  </main>
+  <footer class="footerPlal">
     <article class="footer1">
-    <h3>YouX 
+      <h3>YouX
         Agencia de Marketing Digital</h3>
-    <p>Todas las soluciones para tu negocio online en un sólo lugar</p>
-    <img class="footerImg" src="../img/contactanos2.png" alt="contactenos2">
+      <p>Todas las soluciones para tu negocio online en un sólo lugar</p>
+      <img class="footerImg" src="../img/contactanos2.png" alt="contactenos2">
     </article>
-     <article class="footer2">
-    <p>Design by Marcos Ferrari — Copyright 2022</p>
-    <img class="imgwp" src="../img/wp.svg" alt="wp">
-    <img class="imgwp" src="../img/tw.svg" alt="ld">
-  </article>
-</footer>
-<!--Fin Fotter-->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
+    <article class="footer2">
+      <p>Design by Marcos Ferrari — Copyright 2022</p>
+      <img class="imgwp" src="../img/wp.svg" alt="wp">
+      <img class="imgwp" src="../img/tw.svg" alt="ld">
+    </article>
+  </footer>
+  <!--Fin Fotter-->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
     AOS.init();
   </script>
 </body>
+
 </html>
-
-
