modifica header botones

--- a/index.html
+++ b/index.html
@@ -120,10 +120,8 @@
     <section class="formulario">
       <h2>Consulta por nuestros servicios</h2>
       <form action="exitoso.html" method="get" enctype="application/x-www-form-urlencoded">
-        <p>Nombre:</p>
-        <input type="text" name="nombre" required id="">
-        <p>Apellido:</p>
-        <input type="text" name="apellido" required id="">
+        <p>Nombre y apellido:</p>
+        <input type="text" name="nombre y apellido" required id="">
         <p>Correo electrónico:</p>
         <input type="email" name="correo" required id="">
         <p>Teléfono:</p>
