--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!--Fin inicio-->
     <!--tarjetas-->
-    <h3>SERVICIOS</h3>
+    <h2>  NUESTROS SERVICIOS</h2>
     <section class="tarjetasPrincipal">
       <article class="tarjetas1">
         <h2>Tienda Online</h2>
