--- a/pages/diseñoWeb.html
+++ b/pages/diseñoWeb.html
@@ -58,6 +58,8 @@
           dónde colocar ciertas imágenes y colores, cuándo mostrarlas y cuándo no. La manera en que los datos y
           contenidos son colocados dentro de tu página web tiene que ver con un objetivo directo: mantener la atención
           del usuario y aumentar el porcentaje de conversión.</p>
+          <p>Combinamos estética con funcionalidad, Diseñamos la web desde cero, siempre pensando en la operatividad y la experiencia de usuario, para luego agregarle todas las características que hacen al funcionamiento. Todas nuestras webs están preparadas para trabajar el posicionamiento y adaptadas a todos los dispositivos.
+          </p>
         <p>√ Diseño y desarrollo Web </p>
         <p>√ Registro de dominio</p>
         <p>√ Hosting </p>
