--- a/pages/ecommerce.html
+++ b/pages/ecommerce.html
@@ -54,8 +54,11 @@
       <article class="ecommercee">
         <h2> YouX Tienda Online E-commerce™
         </h2>
-        <h2>La plataforma de venta online más elegida por PyMes y grandes empresas de todo el mundo
+        <h2>La plataforma de venta online más elegida por PyMes y grandes empresas de todo el mundo.
         </h2>
+        <p>Desarrollamos la tienda online de tu empresa integrando medios de pago, gestión de stock, logística, indicadores de gestión KPI, y las mejores herramientas, para que vos y tu equipo la administren y saquen provecho del canal de ventas online, sin demoras.</p>
+        <p>Una plataforma web donde comercializar tus productos y servicios. Integrando métodos de cobro, envío, stock y muchas otras funcionalidades a tu sucursal digital.
+          Tenemos tiendas online escalables para acompañar el crecimiento de tu empresa.</p>
         <p>√ Sin comisiones por venta </p>
         <p>√ Solución llave en mano </p>
         <p>√ Tienda Mayorista y Minorista </p>
