--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           comunicación y comerciales. Aplicada a nuestra experiencia, disciplina y creativas con ideas innovadoras.
           Hemos desarrollado campañas y proyectos en 18 países.
           LIMA - RIO DE JANEIRO</p>
-          <p>Triptongo es una Agencia especializada en Ecommerce, diseño web responsive y servicios de marketing digital para empresas. Ofrecemos diseño, desarrollo, implementación y gestión de herramientas web con el objetivo de potenciar el comercio electrónico.</p>
+          <p>Somos una Agencia especializada en Ecommerce, diseño web responsive y servicios de marketing digital para empresas. Ofrecemos diseño, desarrollo, implementación y gestión de herramientas web con el objetivo de potenciar el comercio electrónico.</p>
           <p>Nuestros productos se basan en plataformas, técnicas de desarrollo y servicios, que siguen las mejores prácticas de la industria mundial.</p>
       </article>
       <img src="./img/quienesomos.jpg" alt="quiene-somos" data-aos="fade-up-right">
