msje formulario de consulta existosa

--- a/pages/marketingDigital.html
+++ b/pages/marketingDigital.html
@@ -81,7 +81,7 @@
       <h3>YouX
         Agencia de Marketing Digital</h3>
       <p>Todas las soluciones para tu negocio online en un sólo lugar</p>
-      <img class="footerImg" src="../img/contactanos2.png" alt="contactenos2">
+      <!-- <img class="footerImg" src="../img/contactanos2.png" alt="contactenos2"> -->
     </article>
     <article class="footer2">
       <p>Design by Marcos Ferrari — Copyright 2022</p>
