--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li class="header__li">
           <a href="./pages/redesSociales.html">Redes Sociales</a>
         </li>
+        <li class="header__li">
+          <a href="./pages/login.html">LOGIN</a>
+        </li>
       </ul>
     </nav>
 
